Jython NEWS

For more details, please see https://hg.python.org/jython

Jython 2.7.1rc
  Bugs fixed
    - [ 2417 ] os.utime fails on UNC network paths
    - [ 2416 ] os.system does not use changes to os.environ in subprocesses
  New Features
    - Use latest upstream bundled wheels for ensurepip: pip (7.1.2), setuptools (18.4),
      replacing wheels patched specifically for Jython

Jython 2.7.1b2
  Bugs fixed
   - [ 2396 ] test_threading and others fail under Cygwin (sys.executable).
   - [ 2397 ] test.test_os_jy fails on Windows due to non-byte PyString.
   - [ 2405 ] os.getpid() is missing (JNR JARs updated). 

Jython 2.7.1b1
  Bugs fixed
   - [ 1423 ] Circular imports no longer cause RuntimeError.
   - [ 2310 ] test_import runs on Windows (and passes with 4 skips).
   - [ 2347 ] failures in test_import_pep328 when run with -m
   - [ 2158, 2259 ] Fixed behaviour of relative from ... import *
   - [ 1879 ] -m command now executes scripts from inside a jar file 
   - [ 2058 ] ClasspathPyImporter implements PEP 302 get_data (and others)
   - [ 2364 ] bytearray and str: isalpha(), isupper() etc. now match Python 2

Jython 2.7
  same as 2.7rc3

Jython 2.7rc3
  Bugs fixed
   - [ 2311, 2319 ] Many compatibility fixes for launcher (bin/jython, bin/jython.exe)
   - [ 2332 ] jython -m test.regrtest -e now finds the tests it should
   - [ 1572 ] sys-package-mgr console messages silenced by default. Thanks to Emmanuel Jannetti.
   - [ 2327 ] Tests in org/python/tests/imp run only with  proper path
   - [ 2105 ] Fix inconsistent conversion of PyObject to String in StdoutWrapper
   - [ 1795 ] Support both subclassing from Java in a Python class and a Python implementation of __tojava__
   - [ 1861 ] Fix threading.Lock to support non-reentrant semantics
   - [ 2323 ] Fixes pickling issues in object.__reduce__ and cPickle.{load, loads}
   - [ 1540 ] Fix stack overflow due to how proxies for Java classes resolve super method in Java